api/src/routes/snapshots/nightlio_api__routes__i18n__tests__languages_get_200_empty.snap
---
source: src/routes/i18n.rs
expression: graded
---
{
  "body": {
    "languages": []
  },
  "content_type": "application/json",
  "headers": {
    "Cache-Control": "public, max-age=3600"
  },
  "status": 200
}
