api/src/routes/snapshots/nightlio_api__routes__i18n__tests__languages_get_trailing_slash_404.snap
---
source: src/routes/i18n.rs
expression: graded
---
{
  "body": {
    "error": "Resource not found"
  },
  "content_type": "application/json",
  "headers": {},
  "status": 404
}
