api/src/routes/snapshots/nightlio_api__routes__i18n__tests__languages_options_204.snap
---
source: src/routes/i18n.rs
expression: graded
---
{
  "body": "",
  "content_type": "text/html; charset=utf-8",
  "headers": {
    "Allow": "HEAD, GET, OPTIONS"
  },
  "status": 204
}
