api/src/routes/snapshots/nightlio_api__routes__i18n__tests__pack_get_304_etag_match.snap
---
source: src/routes/i18n.rs
expression: graded
---
{
  "body": "",
  "content_type": null,
  "headers": {
    "Cache-Control": "public, max-age=3600",
    "ETag": "\"es-1.0.0\""
  },
  "status": 304
}
