api/src/routes/snapshots/nightlio_api__routes__i18n__tests__pack_post_405.snap
---
source: src/routes/i18n.rs
expression: graded
---
{
  "body": {
    "error": "Method not allowed"
  },
  "content_type": "application/json",
  "headers": {
    "Allow": "GET,HEAD,OPTIONS"
  },
  "status": 405
}
